--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "dependencies": {
-    "vitepress": "^1.0.0-alpha.22",
-    "vue": "^3.2.41"
+  "devDependencies": {
+    "vitepress": "^1.0.0-alpha.23"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
