--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.23"
+    "vitepress": "latest"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
